--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".Workout.WorkoutMenu_akt" />
         <activity android:name=".Exercises.ExerciseMenu_akt" />
         <activity android:name=".Diet_Plan.DietPlanMenu_akt"></activity>
+        <activity android:name=".Diet_Plan.DietPlan_try"></activity>
     </application>
 
 </manifest>
