--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/bepeaked_logo"
+        android:icon="@drawable/bepeakedlogo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -21,7 +21,8 @@
         <activity android:name=".MainMenu_akt" />
         <activity android:name=".Workout.WorkoutMenu_akt" />
         <activity android:name=".Exercises.ExerciseMenu_akt" />
-        <activity android:name=".Diet_Plan.DietPlanMenu_akt"></activity>
+        <activity android:name=".Diet_Plan.DietPlanMenu_akt" />
+        <activity android:name=".Exercises.Exercise.Exercise_akt"></activity>
     </application>
 
 </manifest>
