--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="BePeaked">
+            android:label="BodyBook">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
