--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         <activity android:name=".Diet_Plan.DietPlanMenu_akt" />
         <activity android:name=".Exercises.Exercise.Exercise_akt" />
         <activity android:name=".Diet_Plan.Recipe.Recipe_akt"></activity>
-        <activity android:name=".Workout.WorkoutExercises.Workout_Exercises_akt"/>
+        <activity android:name=".Workout.WorkoutExercises.Workout_Exercises_akt"/>z
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="214e1f041248b7c17ff553134eeeaf8697e8e220" />
     </application>
 
 </manifest>
