--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:name="io.fabric.ApiKey"
             android:value="214e1f041248b7c17ff553134eeeaf8697e8e220" />
 
-        <activity android:name=".Settings.Language_akt"></activity>
+        <activity android:name=".Settings.Language_akt" />
+        <activity android:name=".Settings.UnitSystem_akt"></activity>
     </application>
 
 </manifest>
