--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:value="214e1f041248b7c17ff553134eeeaf8697e8e220" />
 
         <activity android:name=".Settings.Language_akt" />
-        <activity android:name=".Settings.UnitSystem_akt"></activity>
+        <activity android:name=".Settings.UnitSystem_akt" />
+        <activity android:name=".Settings.Credits_akt"></activity>
     </application>
 
 </manifest>
