Lavet about og fikset mere sprog i values strings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
 
         <activity android:name=".Settings.Language_akt" />
         <activity android:name=".Settings.UnitSystem_akt" />
-        <activity android:name=".Settings.Credits_akt"></activity>
+        <activity android:name=".Settings.Credits_akt" />
+        <activity android:name=".Settings.About_akt"></activity>
     </application>
 
 </manifest>
