--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
         <activity android:name=".Settings.Language_akt" />
         <activity android:name=".Settings.UnitSystem_akt" />
         <activity android:name=".Settings.Credits_akt" />
+        <activity android:name=".Settings.ActivationKey_akt" />
         <activity android:name=".Settings.About_akt"></activity>
+
     </application>
 
 </manifest>
