--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-database:9.8.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/nineoldandroids-2.4.0.jar')
 }
 
 
