--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity android:name=".Settings.Credits_akt" />
         <activity android:name=".Settings.ActivationKey_akt" />
         <activity android:name=".Settings.About_akt" />
-        <activity android:name=".Settings.User_akt"></activity>
+        <activity android:name=".Settings.User_akt" />
+        <activity android:name=".User.CreateUser_akt"></activity>
     </application>
 
 </manifest>
