--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name=".SingletonApplications"
         android:allowBackup="true"
-        android:icon="@drawable/bodybook_logo"
+        android:icon="@drawable/bepeakedlogotransparent"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
